--- a/css/styles.css
+++ b/css/styles.css
@@ -32,9 +32,11 @@ body {
 .header {
   color: var(--header-color);
   display: flex;
+  /*margin-left: auto;*/
   border-bottom: 1px solid #ececec;
   height: 80px;
- 
+  /*padding-top: 24px;
+  padding-bottom: 24px;*/
 }
 
 .container {
@@ -56,7 +58,7 @@ body {
   align-items: center;
 }
 
-.header > .specialty__list {
+.header > .list {
   display: flex;
   align-items: center;
 }
@@ -93,8 +95,14 @@ a {
   gap: 8px;
 }
 
-.specialty__list {
+.list {
   display: flex;
+  /*gap: 30px;*/
+  /*margin-top: 32px;
+  margin-bottom: 32px;
+  margin-right: -30px;
+  /* margin-left: auto; */
+  /*padding: 0;*/
 }
 
 .portfolio-list {
@@ -293,7 +301,7 @@ ul {
 
 /*main*/
 
-.specialty__hidden {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -354,7 +362,7 @@ ul {
   margin: auto;
 }
 
-.specialty {
+.section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -370,7 +378,7 @@ ul {
   gap: 30px;
 }
 
-.specialty__item {
+.specialty-item {
   width: 270px;
 }
 
@@ -384,7 +392,7 @@ ul {
   border-radius: 4px;
 }
 
-.card__title {
+.subject {
   font-weight: 700;
   font-size: 14px;
   line-height: calc(16 / 14);
@@ -395,7 +403,7 @@ ul {
   margin-bottom: 10px;
 }
 
-.card__text {
+.text {
   font-size: 14px;
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
