--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,25 @@
- 
+/* utils*/
+@import "./utils/variables";
+@import "./utils/visually-hidden";
+@import "./utils/mixins";
+
+/*base*/
+
+@import "./base/general";
+@import "./base/container";
+@import "./base/reset";
+
+/*components*/
+
+@import "./components/header";
+@import "./components/logo";
+@import "./components/button";
+@import "./components/portfolio";
+@import "./components/specialty";
+@import "./components/summary";
+@import "./components/comands";
+@import "./components/social";
+@import "./components/client";
+@import "./components/footer";
+@import "./components/rassylka";
+@import "./components/modal";
