--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -7,7 +7,7 @@
 .button {
     background: var(--logo-text);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
+    @include border-radius (4px);
     cursor: pointer;
     font-family: inherit;
     font-weight: 700;
@@ -27,7 +27,8 @@
 
 .btn {
     background: var(--button-color);
-    border-radius: 4px;
+    @include border-radius (4px);
+    cursor: pointer;
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -36,7 +37,6 @@
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--icon-text);
-    cursor: pointer;
     border: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
