--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -17,7 +17,7 @@
         justify-content: center;
         color: var(--media-text);
         border: 1px solid var(--media-text);
-        border-radius: 4px;
+        @include border-radius (4px);
         width: 100%;
         height: 100%;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
