--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -91,7 +91,7 @@
        bottom: -1px;
        width: 100%;
        height: 4px;
-       border-radius: 2px;
+       @include border-radius (2px);
        background-color: var(--logo-text);
     }
 }
