--- a/sass/components/_rassylka.scss
+++ b/sass/components/_rassylka.scss
@@ -8,7 +8,7 @@
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
+    @include border-radius (4px);
     align-items: center;
     background-color: var(--main-color);
     font-size: 16px;
@@ -45,7 +45,7 @@
     padding: 10px 28px;
     background: var(--logo-text);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
+    @include border-radius (4px);
 
     border: none;
 }
