--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -12,7 +12,7 @@
         width: 44px;
         height: 44px;
         border: none;
-        border-radius: 50%;
+        @include border-radius (50%);
         color: var(--media-text);
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -36,7 +36,7 @@
     justify-content: center;
     width: 44px;
     height: 44px;
-    border-radius: 50%;
+    @include border-radius (50%);
     background: rgba(255, 255, 255, 0.1);
     color: var(--color-text);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
