--- a/sass/components/_specialty.scss
+++ b/sass/components/_specialty.scss
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 30px;
-    border-radius: 4px;
+    @include border-radius (4px);
 }
 
 .subject {
