--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -167,6 +167,10 @@ textarea[placeholder='Введіть текст'] {
     margin-right: 8.38px;
 }
 
+.icon-item {
+    fill: currentColor;
+}
+
 .checkbox-icon {
     margin: 0;
     padding: 0;
